2006-04-05  David Reveman  <davidr@novell.com>

	* src/event.c (handleEvent): Change active window property even though
	it's not different than the window we currently have as active.

	* src/window.c (moveInputFocusToWindow): Set focus even though
	the window is considered the active window.

2006-04-03  David Reveman  <davidr@novell.com>

	* plugins/water.c: Use char everywhere instead.
	Fix offset direction (P-a Bäckström).
	Add offset scale option.

	* plugins/water.c: (loadFragmentProgram): GLubyte -> const GLbyte.
	(loadWaterProgram): char -> GLbyte.
	(loadBumpMapProgram): char -> GLbyte.
	Use char everywhere.

	* configure.ac: Bump version to 0.0.8.

	* plugins/water.c: Add simple rain effect.
	(loadFragmentProgram): Clear any previous error.

	* src/display.c: Change so that timeouts are not only triggered
	when we're idle.

2006-04-02  David Reveman  <davidr@novell.com>

	* plugins/water.c: Add scale and bias to normal so that light can be
	computed correclty. Offset texture coordinates for nice refraction
	effect. (P-a Bäckström)
	(waterDrawWindowTexture): Add scaling after setting up texture
	coordinate generation.
	Fix up loading of bump map programs.
	(softwareUpdate): Improve performance of software fall-back code a bit.
	(waterDrawWindowTexture): Always use filter for when window is
	transformed.

	* plugins/gconf.c (gconfGetValue): Fix typo that caused color
	parsing to be incomplete (Quinn Storm).

2006-04-01  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Add "initiate all" binding which brings up the
	switcher window with all mapped windows and "initiate" binding will
	now bring up the switcher window with only the visible windows.

2006-03-31  David Reveman  <davidr@novell.com>

	* plugins/minimize.c (minDamageWindowRect): Never leave windows
	in scaled state.

	* src/screen.c (moveScreenViewport): Move hidden windows as well.

	* src/window.c (addWindow, activateWindow, hideWindow)
	(showWindow):